--- a/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
@@ -23,13 +23,14 @@
 
 import os
 
-from PyQt4 import QtGui, uic
+from PyQt5 import uic
+from PyQt5 import QtWidgets
 
 FORM_CLASS, _ = uic.loadUiType(os.path.join(
     os.path.dirname(__file__), '${TemplateModuleName}_dialog_base.ui'))
 
 
-class ${TemplateClass}Dialog(QtGui.QDialog, FORM_CLASS):
+class ${TemplateClass}Dialog(QtWidgets.QDialog, FORM_CLASS):
     def __init__(self, parent=None):
         """Constructor."""
         super(${TemplateClass}Dialog, self).__init__(parent)
