--- a/results_dialog_base.ui
+++ b/results_dialog_base.ui
@@ -14,20 +14,6 @@
    <string>Plugin Builder Results</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QWebView" name="web_view">
-     <property name="styleSheet">
-      <string notr="true">QWebView{
-
-}</string>
-     </property>
-     <property name="url">
-      <url>
-       <string>about:blank</string>
-      </url>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
@@ -37,6 +23,9 @@
       <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QTextBrowser" name="web_view"/>
    </item>
   </layout>
  </widget>
