--- a/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
@@ -23,14 +23,14 @@
 
 import os
 
-from PyQt5 import QtGui, uic
+from PyQt5 import QtGui, QtWidgets, uic
 from PyQt5.QtCore import pyqtSignal
 
 FORM_CLASS, _ = uic.loadUiType(os.path.join(
     os.path.dirname(__file__), '${TemplateModuleName}_dockwidget_base.ui'))
 
 
-class ${TemplateClass}DockWidget(QtGui.QDockWidget, FORM_CLASS):
+class ${TemplateClass}DockWidget(QtWidgets.QDockWidget, FORM_CLASS):
 
     closingPlugin = pyqtSignal()
 
@@ -47,4 +47,3 @@ class ${TemplateClass}DockWidget(QtGui.QDockWidget, FORM_CLASS):
     def closeEvent(self, event):
         self.closingPlugin.emit()
         event.accept()
-
