Add generated by... to template files

--- a/plugin_templates/shared/Makefile.tmpl
+++ b/plugin_templates/shared/Makefile.tmpl
@@ -40,7 +40,7 @@ SOURCES = \
 	__init__.py \
 	${TemplateModuleName}.py ${TemplatePyFiles}
 
-PLUGINNAME = ${TemplateClass}
+PLUGINNAME = ${TemplateModuleName}
 
 PY_FILES = \
 	__init__.py \
