--- a/plugin_templates/toolbutton_with_dialog/template/resources.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/resources.tmpl
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/plugins/${TemplateClass}" >
+    <qresource prefix="/plugins/${TemplateModuleName}" >
         <file>icon.png</file>
     </qresource>
 </RCC>
