--- a/plugin_builder_dialog_base.ui
+++ b/plugin_builder_dialog_base.ui
@@ -140,13 +140,13 @@ p, li { white-space: pre-wrap; }
           </size>
          </property>
          <property name="toolTip">
-          <string>Minimum QGIS minor version required for this plugin to work e.g. 2.0</string>
+          <string>Minimum QGIS minor version required for this plugin to work e.g. 3.0</string>
          </property>
          <property name="text">
-          <string>2.0</string>
+          <string>3.0</string>
          </property>
          <property name="placeholderText">
-          <string>e.g. 2.0</string>
+          <string>e.g. 3.0</string>
          </property>
         </widget>
        </item>
@@ -384,7 +384,7 @@ http://semver.org) e.g. 0.1.1</string>
 It should be in CamelCase e.g. PhotoLinker.</string>
          </property>
          <property name="text">
-          <string>Qgis3Test</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. PhotoLinker</string>
@@ -410,7 +410,7 @@ It should be in CamelCase e.g. PhotoLinker.</string>
 Plugin Manager and the Plugins menu e.g. Photo Linker</string>
          </property>
          <property name="text">
-          <string>Qgis3Test</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. Photo Linker</string>
@@ -437,7 +437,7 @@ Manager e.g. &quot;The photo linker plugin lets you link photos to
 points.&quot;</string>
          </property>
          <property name="text">
-          <string>Port of builder to python3</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. This plugin links points to photos</string>
@@ -463,7 +463,7 @@ points.&quot;</string>
 underscore separated e.g. photo_linker.</string>
          </property>
          <property name="text">
-          <string>Qgis3Test</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. photo_linker</string>
@@ -489,7 +489,7 @@ underscore separated e.g. photo_linker.</string>
 Acme Corp.</string>
          </property>
          <property name="text">
-          <string>GeoApt LLC</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. Acme widgets Inc.</string>
@@ -514,7 +514,7 @@ Acme Corp.</string>
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Your email address (used in the copyright header) e.g. jack@qgis&lt;/p&gt;&lt;p&gt;.org&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
-          <string>gsherman@geoapt.com</string>
+          <string></string>
          </property>
          <property name="placeholderText">
           <string>e.g. jack@qgis.org</string>
