--- a/plugin_templates/processing_provider/template/results.tmpl
+++ b/plugin_templates/processing_provider/template/results.tmpl
@@ -24,15 +24,16 @@ Notes:
         make changes. This requires GNU make (gmake). The Makefile is ready to use, however you 
         will have to edit it to add addional Python source files, dialogs, and translations.
     <li>You can also use <b>pb_tool</b> to compile and deploy your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
-        <i>pip</i> or <i>easy_install</i>. See <a href="http://loc8.cc/pb_tool">http://loc8.cc/pb_tool</a> for more information.
+        <i>pip</i> or <i>easy_install</i>. See <b>http://loc8.cc/pb_tool</b> for more information.
 </ul>
 </div>
 <div style='font-size:.9em;'>
 <p>
-For information on writing PyQGIS code, see <a href="http://loc8.cc/pyqgis_resources">http://loc8.cc/pyqgis_resources</a> for a list of resources.
+For information on writing PyQGIS code, see <b>http://loc8.cc/pyqgis_resources</b> for a list of resources.
 </p>
 </div>
-<img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;2011-2015 GeoApt LLC - geoapt.com 
+<p>
+&copy;2011-2017 GeoApt LLC - geoapt.com 
+</p>
 </body>
 </html>
