--- a/plugin_templates/toolbutton_with_dialog/template/results.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/results.tmpl
@@ -13,7 +13,7 @@ Your QGIS plugin directory is located at:<br>
 <p>
 <h3>What's Next</h3>
 <ol>
-    <li>In your plugin directory, compile the resources file using pyrcc4 (simply run <b>make</b> if you have automake or use <b>pb_tool</b>)
+    <li>In your plugin directory, compile the resources file using pyrcc5 (simply run <b>make</b> if you have automake or use <b>pb_tool</b>)
     <li>Test the generated sources using <b>make test</b> (or run tests from your IDE)
     <li>Copy the entire directory containing your new plugin to the QGIS plugin directory (see Notes below)
     <li>Test the plugin by enabling it in the QGIS plugin manager
@@ -27,15 +27,16 @@ Notes:
         make changes. This requires GNU make (gmake). The Makefile is ready to use, however you 
         will have to edit it to add addional Python source files, dialogs, and translations.
     <li>You can also use <b>pb_tool</b> to compile and deploy your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
-        <i>pip</i> or <i>easy_install</i>. See <a href="http://loc8.cc/pb_tool">http://loc8.cc/pb_tool</a> for more information.
+        <i>pip</i> or <i>easy_install</i>. See <b>http://loc8.cc/pb_tool</b> for more information.
 </ul>
 </div>
 <div style='font-size:.9em;'>
 <p>
-For information on writing PyQGIS code, see <a href="http://loc8.cc/pyqgis_resources">http://loc8.cc/pyqgis_resources</a> for a list of resources.
+For information on writing PyQGIS code, see <b>http://loc8.cc/pyqgis_resources</b> for a list of resources.
 </p>
 </div>
-<img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;2011-2015 GeoApt LLC - geoapt.com 
+<p>
+&copy;2011-2017 GeoApt LLC - geoapt.com 
+</p>
 </body>
 </html>
