Fix typos in templates for dialog/dockwidgets
Fixes typos in results/readme messages, specifically around:

"Modify your user interface by opening <b>${TemplateModuleName}_<xxx>.ui</b> in Qt Designer"

to make the messages refer to the correct files.

--- a/plugin_templates/toolbutton_with_dialog/template/readme.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/readme.tmpl
@@ -21,7 +21,7 @@ What's Next:
 
   * Create your own custom icon, replacing the default icon.png
 
-  * Modify your user interface by opening ${TemplateClass}.ui in Qt Designer
+  * Modify your user interface by opening ${TemplateClass}_dialog_base.ui in Qt Designer
 
   * You can use the Makefile to compile your Ui and resource files when
     you make changes. This requires GNU make (gmake)
