--- a/plugin_templates/toolbutton_with_dockwidget/template/results.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/results.tmpl
@@ -19,7 +19,7 @@ Your QGIS plugin directory is located at:<br>
     <li>Test the plugin by enabling it in the QGIS plugin manager
     <li>Customize it by editing the implementation file <b>${TemplateModuleName}.py</b>
     <li>Create your own custom icon, replacing the default <b>icon.png</b>
-    <li>Modify your user interface by opening <b>${TemplateModuleName}_dialog_base.ui</b> in Qt Designer
+    <li>Modify your user interface by opening <b>${TemplateModuleName}_dockwidget_base.ui</b> in Qt Designer
 </ol>
 Notes:
 <ul>
