Update templates for new processing classes

--- a/plugin_templates/processing_provider/template/module_name.tmpl
+++ b/plugin_templates/processing_provider/template/module_name.tmpl
@@ -34,8 +34,8 @@ import os
 import sys
 import inspect
 
-from processing.core.Processing import Processing
-from ${TemplateModuleName}_provider import ${TemplateClass}Provider
+from qgis.core import QgsProcessingAlgorithm, QgsApplication
+from .${TemplateModuleName}_provider import ${TemplateClass}Provider
 
 cmd_folder = os.path.split(inspect.getfile(inspect.currentframe()))[0]
 
@@ -43,13 +43,13 @@ if cmd_folder not in sys.path:
     sys.path.insert(0, cmd_folder)
 
 
-class ${TemplateClass}Plugin:
+class ${TemplateClass}Plugin(object):
 
     def __init__(self):
         self.provider = ${TemplateClass}Provider()
 
     def initGui(self):
-        Processing.addProvider(self.provider)
+        QgsApplication.processingRegistry().addProvider(self.provider)
 
     def unload(self):
-        Processing.removeProvider(self.provider)
+        QgsApplication.processingRegistry().removeProvider(self.provider)
