--- a/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
@@ -30,26 +30,26 @@ __copyright__ = '(C) $TemplateYear by $TemplateAuthor'
 
 __revision__ = '$TemplateVCSFormat'
 
-from PyQt5.QtCore import QSettings
-from qgis.core import QgsVectorFileWriter
+from PyQt5.QtCore import QSettings, QCoreApplication
+from qgis.core import (QgsProcessing,
+                       QgsFeatureSink,
+                       QgsProcessingAlgorithm,
+                       QgsProcessingParameterFeatureSource,
+                       QgsProcessingParameterFeatureSink)
 
-from processing.core.GeoAlgorithm import GeoAlgorithm
-from processing.core.parameters import ParameterVector
-from processing.core.outputs import OutputVector
-from processing.tools import dataobjects, vector
 
-
-class ${TemplateClass}Algorithm(GeoAlgorithm):
-    """This is an example algorithm that takes a vector layer and
-    creates a new one just with just those features of the input
-    layer that are selected.
+class ${TemplateClass}Algorithm(QgsProcessingAlgorithm):
+    """
+    This is an example algorithm that takes a vector layer and
+    creates a new identical one.
 
     It is meant to be used as an example of how to create your own
     algorithms and explain methods and variables used to do it. An
     algorithm like this will be available in all elements, and there
     is not need for additional work.
 
-    All Processing algorithms should extend the GeoAlgorithm class.
+    All Processing algorithms should extend the QgsProcessingAlgorithm
+    class.
     """
 
     # Constants used to refer to parameters and outputs. They will be
@@ -59,62 +59,84 @@ class ${TemplateClass}Algorithm(GeoAlgorithm):
     OUTPUT_LAYER = 'OUTPUT_LAYER'
     INPUT_LAYER = 'INPUT_LAYER'
 
-    def defineCharacteristics(self):
-        """Here we define the inputs and output of the algorithm, along
+    def initAlgorithm(self, config):
+        """
+        Here we define the inputs and output of the algorithm, along
         with some other properties.
         """
 
-        # The name that the user will see in the toolbox
-        self.name = '$TemplateAlgoName'
-
-        # The branch of the toolbox under which the algorithm will appear
-        self.group = '$TemplateAlgoGroup'
-
         # We add the input vector layer. It can have any kind of geometry
         # It is a mandatory (not optional) one, hence the False argument
-        self.addParameter(ParameterVector(self.INPUT_LAYER,
-            self.tr('Input layer'), [ParameterVector.VECTOR_TYPE_ANY], False))
+        self.addParameter(
+            QgsProcessingParameterFeatureSource(
+                self.INPUT_LAYER,
+                self.tr('Input layer'),
+                [QgsProcessing.TypeVectorAnyGeometry]
+            )
+        )
 
         # We add a vector layer as output
-        self.addOutput(OutputVector(self.OUTPUT_LAYER,
-            self.tr('Output layer with selected features')))
+        self.addParameter(
+            QgsProcessingParameterFeatureSink(
+                self.OUTPUT_LAYER,
+                self.tr('Output layer')
+            )
+        )
 
-    def processAlgorithm(self, progress):
-        """Here is where the processing itself takes place."""
+    def processAlgorithm(self, parameters, context, feedback):
+        """
+        Here is where the processing itself takes place.
+        """
 
-        # The first thing to do is retrieve the values of the parameters
-        # entered by the user
-        inputFilename = self.getParameterValue(self.INPUT_LAYER)
-        output = self.getOutputValue(self.OUTPUT_LAYER)
+        # Retrieve the source and sink
+        source = self.parameterAsSource(parameters, self.INPUT_LAYER, context)
+        (sink, dest_id) = self.parameterAsSink(parameters, self.OUTPUT_LAYER,
+                context, source.fields(), source.wkbType(), source.sourceCrs())
 
-        # Input layers vales are always a string with its location.
-        # That string can be converted into a QGIS object (a
-        # QgsVectorLayer in this case) using the
-        # processing.getObjectFromUri() method.
-        vectorLayer = dataobjects.getObjectFromUri(inputFilename)
+        # Compute the number of steps to display within the progress bar and
+        # get features from source
+        total = 100.0 / source.featureCount() if source.featureCount() else 0
+        features = source.getFeatures()
 
-        # And now we can process
+        for current, feature in enumerate(features):
+            # Stop the algorithm if cancel button has been clicked
+            if feedback.isCanceled():
+                break
 
-        # First we create the output layer. The output value entered by
-        # the user is a string containing a filename, so we can use it
-        # directly
-        settings = QSettings()
-        systemEncoding = settings.value('/UI/encoding', 'System')
-        provider = vectorLayer.dataProvider()
-        writer = QgsVectorFileWriter(output, systemEncoding,
-                                     provider.fields(),
-                                     provider.geometryType(), provider.crs())
+            # Add a feature in the sink
+            sink.addFeature(feature, QgsFeatureSink.FastInsert)
 
-        # Now we take the features from input layer and add them to the
-        # output. Method features() returns an iterator, considering the
-        # selection that might exist in layer and the configuration that
-        # indicates should algorithm use only selected features or all
-        # of them
-        features = vector.features(vectorLayer)
-        for f in features:
-            writer.addFeature(f)
+            # Update the progress bar
+            feedback.setProgress(int(current * total))
 
-        # There is nothing more to do here. We do not have to open the
-        # layer that we have created. The framework will take care of
-        # that, or will handle it if this algorithm is executed within
-        # a complex model
+        return {self.OUTPUT_LAYER: dest_id}
+
+    def name(self):
+        """
+        Returns the algorithm name, used for identifying the algorithm. This
+        string should be fixed for the algorithm, and must not be localised.
+        The name should be unique within each provider. Names should contain
+        lowercase alphanumeric characters only and no spaces or other
+        formatting characters.
+        """
+        return '$TemplateAlgoName'
+
+    def displayName(self):
+        """
+        Returns the translated algorithm name, which should be used for any
+        user-visible display of the algorithm name.
+        """
+        return self.tr(self.name())
+
+    def group(self):
+        """
+        Returns the name of the group this algorithm belongs to. This string
+        should be localised.
+        """
+        return self.tr('$TemplateAlgoGroup')
+
+    def tr(self, string):
+        return QCoreApplication.translate('Processing', string)
+
+    def createInstance(self):
+        return ${TemplateClass}Algorithm()
