--- a/plugin_templates/processing_provider/template/module_name_provider.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_provider.tmpl
@@ -72,3 +72,12 @@ class ${TemplateClass}Provider(QgsProcessingProvider):
         This string should be short (e.g. "Lastools") and localised.
         """
         return self.tr('$TemplateProviderName')
+
+    def longName(self):
+        """
+        Returns the a longer version of the provider name, which can include
+        extra details such as version numbers. E.g. "Lastools LIDAR tools
+        (version 2.2.1)". This string should be localised. The default
+        implementation returns the same string as name().
+        """
+        return self.name()
