Fix up plugin_builder_dialog for new page

--- a/plugin_templates/processing_provider/template/__init__.tmpl
+++ b/plugin_templates/processing_provider/template/__init__.tmpl
@@ -31,7 +31,7 @@ def classFactory(iface):  # pylint: disable=invalid-name
     """Load ${TemplateClass} class from file ${TemplateClass}.
 
     :param iface: A QGIS interface instance.
-    :type iface: QgsInterface
+    :type iface: QgisInterface
     """
     #
     from .${TemplateModuleName} import ${TemplateClass}Plugin
