--- a/plugin_templates/toolbutton_with_dialog/template/__init__.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/__init__.tmpl
@@ -28,7 +28,7 @@ def classFactory(iface):  # pylint: disable=invalid-name
     """Load ${TemplateClass} class from file ${TemplateClass}.
 
     :param iface: A QGIS interface instance.
-    :type iface: QgsInterface
+    :type iface: QgisInterface
     """
     #
     from .${TemplateModuleName} import ${TemplateClass}
