New dockwidget plugin class inherits from `object`
Fix #82

--- a/plugin_templates/toolbutton_with_dockwidget/template/module_name.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/module_name.tmpl
@@ -30,7 +30,7 @@ from ${TemplateModuleName}_dockwidget import ${TemplateClass}DockWidget
 import os.path
 
 
-class ${TemplateClass}:
+class ${TemplateClass}(object):
     """QGIS Plugin Implementation."""
 
     def __init__(self, iface):
