New processing plugin class inherits from `object`
Fix #82

--- a/plugin_templates/processing_provider/template/module_name.tmpl
+++ b/plugin_templates/processing_provider/template/module_name.tmpl
@@ -42,7 +42,7 @@ if cmd_folder not in sys.path:
     sys.path.insert(0, cmd_folder)
 
 
-class ${TemplateClass}Plugin:
+class ${TemplateClass}Plugin(object):
 
     def __init__(self):
         self.provider = ${TemplateClass}Provider()
