--- a/plugin_templates/processing_provider/template/module_name_provider.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_provider.tmpl
@@ -79,7 +79,7 @@ class ${TemplateClass}Provider(AlgorithmProvider):
         return '$TemplateProviderName'
 
     def getDescription(self):
-        """This is the provired full name.
+        """This is the provider full name.
         """
         return '$TemplateProviderDescr'
 
