--- a/plugin_templates/processing_provider/template/results.tmpl
+++ b/plugin_templates/processing_provider/template/results.tmpl
@@ -22,7 +22,7 @@ Notes:
 <ul>
     <li>You can use the <b>Makefile</b> to compile and deploy when you
         make changes. This requires GNU make (gmake). The Makefile is ready to use, however you 
-        will have to edit it to add addional Python source files, dialogs, and translations.
+        will have to edit it to add additional Python source files, dialogs, and translations.
     <li>You can also use <b>pb_tool</b> to compile and deploy your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
         <i>pip</i> or <i>easy_install</i>. See <a href="http://loc8.cc/pb_tool">http://loc8.cc/pb_tool</a> for more information.
 </ul>
