--- a/plugin_templates/toolbutton_with_dockwidget/template/test/test_resources.templ
+++ b/plugin_templates/toolbutton_with_dockwidget/template/test/test_resources.templ
@@ -19,7 +19,7 @@ from PyQt4.QtGui import QIcon
 
 
 class ${TemplateClass}DialogTest(unittest.TestCase):
-    """Test rerources work."""
+    """Test resources work."""
 
     def setUp(self):
         """Runs before each test."""
