--- a/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
@@ -27,6 +27,7 @@ import os
 from PyQt5 import uic
 from PyQt5 import QtWidgets
 
+# This loads your .ui file so that PyQt can populate your plugin with the elements from Qt Designer
 FORM_CLASS, _ = uic.loadUiType(os.path.join(
     os.path.dirname(__file__), '${TemplateModuleName}_dialog_base.ui'))
 
@@ -35,8 +36,8 @@ class ${TemplateClass}Dialog(QtWidgets.QDialog, FORM_CLASS):
     def __init__(self, parent=None):
         """Constructor."""
         super(${TemplateClass}Dialog, self).__init__(parent)
-        # Set up the user interface from Designer.
-        # After setupUI you can access any designer object by doing
+        # Set up the user interface from Designer through FORM_CLASS.
+        # After self.setupUi() you can access any designer object by doing
         # self.<objectname>, and you can use autoconnect slots - see
         # http://qt-project.org/doc/qt-4.8/designer-using-a-ui-file.html
         # #widgets-and-dialogs-with-auto-connect
