Some code cleanup

--- a/plugin_templates/toolbutton_with_dialog/template/results.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/results.tmpl
@@ -13,8 +13,8 @@ Your QGIS plugin directory is located at:<br>
 <p>
 <h3>What's Next</h3>
 <ol>
-    <li>In your plugin directory, compile the resources file using pyrcc5 (simply run <b>make</b> if you have automake or use <b>pb_tool</b>)
-    <li>Test the generated sources using <b>make test</b> (or run tests from your IDE)
+    <li>If resources.py is not present in your plugin directory, compile the resources file using pyrcc5 (simply use <b>pb_tool</b> or <b>make</b> if you have automake)
+    <li>Optionally, test the generated sources using <b>make test</b> (or run tests from your IDE)
     <li>Copy the entire directory containing your new plugin to the QGIS plugin directory (see Notes below)
     <li>Test the plugin by enabling it in the QGIS plugin manager
     <li>Customize it by editing the implementation file <b>${TemplateModuleName}.py</b>
@@ -23,11 +23,11 @@ Your QGIS plugin directory is located at:<br>
 </ol>
 Notes:
 <ul>
-    <li>You can use the <b>Makefile</b> to compile and deploy when you
+    <li>You can use <b>pb_tool</b> to compile, deploy, and manage your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
+        <i>pip</i> or <i>easy_install</i>. See <b>http://loc8.cc/pb_tool</b> for more information.
+    <li>You can also use the <b>Makefile</b> to compile and deploy when you
         make changes. This requires GNU make (gmake). The Makefile is ready to use, however you 
         will have to edit it to add addional Python source files, dialogs, and translations.
-    <li>You can also use <b>pb_tool</b> to compile and deploy your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
-        <i>pip</i> or <i>easy_install</i>. See <b>http://loc8.cc/pb_tool</b> for more information.
 </ul>
 </div>
 <div style='font-size:.9em;'>
@@ -36,7 +36,7 @@ For information on writing PyQGIS code, see <b>http://loc8.cc/pyqgis_resources</
 </p>
 </div>
 <p>
-&copy;2011-2018 GeoApt LLC - geoapt.com 
+&copy;2011-2019 GeoApt LLC - geoapt.com 
 </p>
 </body>
 </html>
