change "from PyQt5" to "from qgis.PyQt"

--- a/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
@@ -30,7 +30,7 @@ __copyright__ = '(C) $TemplateYear by $TemplateAuthor'
 
 __revision__ = '$TemplateVCSFormat'
 
-from PyQt5.QtCore import QCoreApplication
+from qgis.PyQt.QtCore import QCoreApplication
 from qgis.core import (QgsProcessing,
                        QgsFeatureSink,
                        QgsProcessingAlgorithm,
