--- a/plugin_templates/toolbutton_with_dialog/template/test/test_module_name_dialog.templ
+++ b/plugin_templates/toolbutton_with_dialog/template/test/test_module_name_dialog.templ
@@ -14,7 +14,7 @@ __copyright__ = 'Copyright $TemplateYear, $TemplateAuthor'
 
 import unittest
 
-from PyQt5.QtGui import QDialogButtonBox, QDialog
+from qgis.PyQt.QtGui import QDialogButtonBox, QDialog
 
 from ${TemplateModuleName}_dialog import ${TemplateClass}Dialog
 
