--- a/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
@@ -24,8 +24,8 @@
 
 import os
 
-from PyQt5 import uic
-from PyQt5 import QtWidgets
+from qgis.PyQt import uic
+from qgis.PyQt import QtWidgets
 
 # This loads your .ui file so that PyQt can populate your plugin with the elements from Qt Designer
 FORM_CLASS, _ = uic.loadUiType(os.path.join(
