--- a/plugin_templates/toolbutton_with_dialog/template/test/test_resources.templ
+++ b/plugin_templates/toolbutton_with_dialog/template/test/test_resources.templ
@@ -14,7 +14,7 @@ __copyright__ = 'Copyright $TemplateYear, $TemplateAuthor'
 
 import unittest
 
-from PyQt5.QtGui import QIcon
+from qgis.PyQt.QtGui import QIcon
 
 
 
