--- a/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
@@ -24,8 +24,8 @@
 
 import os
 
-from PyQt5 import QtGui, QtWidgets, uic
-from PyQt5.QtCore import pyqtSignal
+from qgis.PyQt import QtGui, QtWidgets, uic
+from qgis.PyQt.QtCore import pyqtSignal
 
 FORM_CLASS, _ = uic.loadUiType(os.path.join(
     os.path.dirname(__file__), '${TemplateModuleName}_dockwidget_base.ui'))
