--- a/plugin_templates/toolbutton_with_dockwidget/template/test/test_module_name_dockwidget.templ
+++ b/plugin_templates/toolbutton_with_dockwidget/template/test/test_module_name_dockwidget.templ
@@ -14,7 +14,7 @@ __copyright__ = 'Copyright $TemplateYear, $TemplateAuthor'
 
 import unittest
 
-from PyQt5.QtGui import QDockWidget
+from qgis.PyQt.QtGui import QDockWidget
 
 from ${TemplateModuleName}_dockwidget import ${TemplateClass}DockWidget
 
