Fix make compile not working when icon changes

--- a/plugin_templates/shared/Makefile.tmpl
+++ b/plugin_templates/shared/Makefile.tmpl
@@ -88,7 +88,7 @@ default:
 
 compile: $$(COMPILED_RESOURCE_FILES)
 
-%.py : %.qrc $$(RESOURCES_SRC)
+%.py : %.qrc $$(RESOURCE_SRC)
 	pyrcc5 -o $$*.py  $$<
 
 %.qm : %.ts
