Set import_from on uic.loadUiType calls
This fix resources import when loading ui file.
See https://gis.stackexchange.com/a/367417/166923

--- a/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/module_name_dockwidget.tmpl
@@ -27,8 +27,12 @@ import os
 from qgis.PyQt import QtGui, QtWidgets, uic
 from qgis.PyQt.QtCore import pyqtSignal
 
-FORM_CLASS, _ = uic.loadUiType(os.path.join(
-    os.path.dirname(__file__), '${TemplateModuleName}_dockwidget_base.ui'))
+FORM_CLASS, _ = uic.loadUiType(
+    os.path.join(
+        os.path.dirname(__file__),
+        '${TemplateModuleName}_dockwidget_base.ui'),
+    from_imports=True,
+    import_from='${TemplateModuleName}')
 
 
 class ${TemplateClass}DockWidget(QtWidgets.QDockWidget, FORM_CLASS):
