--- a/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name_dialog.tmpl
@@ -28,8 +28,12 @@ from qgis.PyQt import uic
 from qgis.PyQt import QtWidgets
 
 # This loads your .ui file so that PyQt can populate your plugin with the elements from Qt Designer
-FORM_CLASS, _ = uic.loadUiType(os.path.join(
-    os.path.dirname(__file__), '${TemplateModuleName}_dialog_base.ui'))
+FORM_CLASS, _ = uic.loadUiType(
+    os.path.join(
+        os.path.dirname(__file__),
+        '${TemplateModuleName}_dialog_base.ui'),
+    from_imports=True,
+    import_from='${TemplateModuleName}')
 
 
 class ${TemplateClass}Dialog(QtWidgets.QDialog, FORM_CLASS):
